@@ -3990,9 +3990,10 @@ password=P@ssW0rd!
                  <td>Enter the username and password used to login to the Surround SCM server. Format is username:password. If not entered, the last saved login parameters are used.</td>
               </tr>
             <tr>
-               <td>property</td>
-               <td>No</td>
-               <td>Unsupported!</td>
+                <td>property</td>
+                <td>No</td>
+                <td>Set this property if a modification has occurred.  For use
+                in conditionally controlling the build later.</td>
             </tr>
             </tbody>
         </table>
